Fix image errors

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
          <p>Her favorite foods include anything but her kibble. She enjoys sunbathing and long naps, along with lots of petting. However, she hates getting her stomach rubbed.</p>
          
          <h3>Photo Gallery</h3>
-         <img src="images/lucy_upsidedown.jpg" width="200" alt="Lucy laying on her back.">
+         <img src="images/Lucy_upsidedown.JPG" width="200" alt="Lucy laying on her back.">
          <img src="images/lucy_sleeping.jpg" width="200" alt="Lucy curled up in her bed sleeping.">
-         <img src="images/lucy_sleepingpt2.jpg" width="200" alt="Lucy curled up sleeping.">
+         <img src="images/Lucy_sleepingpt2.JPG" width="200" alt="Lucy curled up sleeping.">
          <img src="images/lucy_laying.jpg" width="200" alt="Lucy laying staring at the camera.">
          
          <h3>Likes</h3>
