--- a/travel.html
+++ b/travel.html
@@ -24,8 +24,8 @@
       <div>
          <h2>Sofia, Bulgaria</h2>
 
-         <img src="images/sofia_bulgaria.gif" width="400" alt="Town center of Sofia, Bulgaria.">
-         <img src="images/sofia_bulgaria.png" width="400" alt="Town center of Sofia, Bulgaria.">
+         <img src="images/Sofia_Bulgaria.gif" width="400" alt="Town center of Sofia, Bulgaria.">
+         <img src="images/Sofia_Bulgaria.png" width="400" alt="Town center of Sofia, Bulgaria.">
 
          <h3>Geographical location: Europe</h3>
          <p>Sofia is the capital city of Bulgaria, a country located in Eastern Europe. It is part of the European Union and the primary language spoken is Bulgarian. The city's population is around 1.3 million. In addition to its urban structures, Sofia also contains a mountain peak called “Vitosha”.</p>
@@ -129,8 +129,8 @@
       <div>
          <h2>San Francisco, California</h2>
 
-         <img src="images/san_francisco_bridge.gif" width="400" alt="Golden Gate Bridge at dusk.">
-         <img src="images/san_francisco_bridge.jpeg" width="400" alt="Golden Gate Bridge at dusk.">
+         <img src="images/San_Francisco_bridge.gif" width="400" alt="Golden Gate Bridge at dusk.">
+         <img src="images/San_Francisco_bridge.jpeg" width="400" alt="Golden Gate Bridge at dusk.">
 
          <h3>Geographical Location: North America</h3>
          <p>San Francisco is a great location to visit with many landmarks, including the Golden Gate Bridge and Alcatraz. Located in Northern California, San Francisco is one of the most populated cities in California with a population of 815,000. The city is also a center of culture and industry. San Francisco is home to a thriving tech industry.</p>
@@ -138,19 +138,19 @@
 
          <h3>Photo Gallery</h3>
          <figure>
-            <img src="images/san_francisco_alcatraz.jpeg" width="200" alt="Alcatraz prison.">
+            <img src="images/San_Francisco_Alcatraz.jpeg" width="200" alt="Alcatraz prison.">
             <figcaption>Alcatraz island.</figcaption>
          </figure>
          <figure>
-            <img src="images/san_francisco_lombard.jpeg" width="200" alt="Lombard Street in San Francisco.">
+            <img src="images/San_Francisco_Lombard.jpeg" width="200" alt="Lombard Street in San Francisco.">
             <figcaption>Lombard Street.</figcaption>
          </figure>
          <figure>
-            <img src="images/san_francisco_painted_ladies.jpeg" width="200" alt="The Painted Ladies.">
+            <img src="images/San_Francisco_painted_ladies.jpeg" width="200" alt="The Painted Ladies.">
             <figcaption>The homes known as the Painted Ladies. A row of colorful homes that are adjacent to a park. They are known for being in Full House.</figcaption>
          </figure>
          <figure>
-            <img src="images/san_francisco_street.jpeg" width="200" alt="Steep hill in San Francisco with cars on it.">
+            <img src="images/San_Francisco_street.jpeg" width="200" alt="Steep hill in San Francisco with cars on it.">
             <figcaption>Hill in San Francisco.</figcaption>
          </figure>
          <figure>
@@ -164,7 +164,7 @@
       <div>
          <h2>Sequoia National Park</h2>
 
-         <img src="sequoia_national_park.gif" width="400" alt="A sequoia tree on a snowy day.">
+         <img src="images/.gif" width="400" alt="A sequoia tree on a snowy day.">
          <img src="sequoia_national_park.jpg" width="400" alt="A towering sequoia tree during the day.">
 
          <h2>Geographical Location: North America</h2>
