--- a/recipes.html
+++ b/recipes.html
@@ -27,7 +27,7 @@
          <span>Source: <a href="https://tasty.co/recipe/homemade-chicken-tikka-masala">Homemade Chicken Tikka Masala Recipe</a></span>
          <span>Category: Main Dish</span>
 
-         <img src="images/tikkamasala_1.jpg" width="400" alt="Tikka masala dish">
+         <img src="images/tikkamasala_1.JPG" width="400" alt="Tikka masala dish">
          <p>Chicken Tikka Masala is a delicious dish to have for dinner. I had it for dinner last night! It has a nice mixture of savory and sweet flavors, and is best served with Naan and rice and vegetables.</p>
          
          <h3>Recipe Ingredients</h3>
@@ -91,7 +91,7 @@
          <span>Source: <a href="https://www.allrecipes.com/recipe/24332/ultimate-twice-baked-potatoes/">Ultimate Twice Baked Potatoes Recipe</a></span>
          <span>Category: Main Dish, Comfort Food</span>
 
-         <img src="images/bakedpotato.jpeg" width="400" alt="Baked potato dish topped with green onion and bacon.">
+         <img src="images/Bakedpotato.jpeg" width="400" alt="Baked potato dish topped with green onion and bacon.">
          <p>These twice-baked potatoes work perfectly as a simple, crowd-pleasing entrée or as a rich side dish. It is believed that baked potatoes originate from South America, or more specifically, Peru. The Inca Indians in Peru were said to be the first to originally cultivate potatoes and when the Spanish conquistadors conquered Peru, they brought the potato to Europe.</p>
 
          <h3>Recipe Ingredients</h3>
@@ -119,8 +119,8 @@
          </ol>
 
          <h3>Additional Food Images</h3>
-         <img src="images/ingredients.jpeg" width="200" alt="All the ingredients needed for this recipe.">
-         <img src="images/slicedpotatoes.jpeg" width="200" alt="Scooped out potatoes.">
+         <img src="images/Ingredients.jpeg" width="200" alt="All the ingredients needed for this recipe.">
+         <img src="images/Slicedpotatoes.jpeg" width="200" alt="Scooped out potatoes.">
          <img src="images/mixture.jpeg" width="200" alt="Mixture to put in the potatoes.">
          
          <!-- Sanjida Eva -->
