--- a/travel.html
+++ b/travel.html
@@ -164,8 +164,8 @@
       <div>
          <h2>Sequoia National Park</h2>
 
-         <img src="images/.gif" width="400" alt="A sequoia tree on a snowy day.">
-         <img src="sequoia_national_park.jpg" width="400" alt="A towering sequoia tree during the day.">
+         <img src="images/sequoia_national_park.gif" width="400" alt="A sequoia tree on a snowy day.">
+         <img src="images/sequoia_national_park.jpg" width="400" alt="A towering sequoia tree during the day.">
 
          <h2>Geographical Location: North America</h2>
          <p>Sequoia National Park is a large forest located in the Sierra Nevada mountain range in California. It is famous for its gigantic sequoia and redwood trees, as well as its underground Crystal Cave. The park is a well-known attraction to many tourists, receiving more than a million visitors annually. In addition to its collection of giant trees, Sequoia National Park is also home to thousands of prevalent flora and fauna.</p>
