Fix nested lists in recipes.html

--- a/recipes.html
+++ b/recipes.html
@@ -32,38 +32,40 @@
          
          <h3>Recipe Ingredients</h3>
          <ul>
-            <li>Chicken Marinade</li>
-            <ul>
-               <li>3 boneless, skinless chicken breasts</li>
-               <li>½ cup plain yogurt</li>
-               <li>2 tablespoons lemon juice</li>
-               <li>6 cloves garlic, minced</li>
-               <li>1 tablespoon minced ginger</li>
-               <li>2 teaspoons salt</li>
-               <li>2 teaspoons ground cumin</li>
-               <li>2 teaspoons garam masala</li>
-               <li>2 teaspoons paprika</li>
-            </ul>
-            <li>Sauce</li>
-            <ul>
-               <li>3 tablespoons oil</li>
-               <li>1 large onion, finely chopped</li>
-               <li>2 tablespoons minced ginger</li>
-               <li>8 cloves garlic, minced</li>
-               <li>2 teaspoons ground cumin</li>
-               <li>2 teaspoons ground turmeric</li>
-               <li>2 teaspoons ground coriander</li>
-               <li>2 teaspoons paprika</li>
-               <li>2 teaspoons chili powder</li>
-               <li>2 teaspoons garam masala</li>
-               <li>1 tablespoon tomato puree</li>
-               <li>3 ½ cups tomato sauce</li>
-               <li>1 ¼ cups water</li>
-               <li>1 cup heavy cream</li>
-               <li>¼ cup fresh cilantro, for garnish</li>
-               <li>cooked rice, for serving</li>
-               <li>naan bread, for serving</li>
-            </ul>
+            <li>Chicken Marinade
+               <ul>
+                  <li>3 boneless, skinless chicken breasts</li>
+                  <li>½ cup plain yogurt</li>
+                  <li>2 tablespoons lemon juice</li>
+                  <li>6 cloves garlic, minced</li>
+                  <li>1 tablespoon minced ginger</li>
+                  <li>2 teaspoons salt</li>
+                  <li>2 teaspoons ground cumin</li>
+                  <li>2 teaspoons garam masala</li>
+                  <li>2 teaspoons paprika</li>
+               </ul>
+            </li>
+            <li>Sauce
+               <ul>
+                  <li>3 tablespoons oil</li>
+                  <li>1 large onion, finely chopped</li>
+                  <li>2 tablespoons minced ginger</li>
+                  <li>8 cloves garlic, minced</li>
+                  <li>2 teaspoons ground cumin</li>
+                  <li>2 teaspoons ground turmeric</li>
+                  <li>2 teaspoons ground coriander</li>
+                  <li>2 teaspoons paprika</li>
+                  <li>2 teaspoons chili powder</li>
+                  <li>2 teaspoons garam masala</li>
+                  <li>1 tablespoon tomato puree</li>
+                  <li>3 ½ cups tomato sauce</li>
+                  <li>1 ¼ cups water</li>
+                  <li>1 cup heavy cream</li>
+                  <li>¼ cup fresh cilantro, for garnish</li>
+                  <li>cooked rice, for serving</li>
+                  <li>naan bread, for serving</li>
+               </ul>
+            </li>
          </ul>
 
          <h3>Recipe Steps</h3>
